--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,3 @@
-/* Thomsoon.com - OnePage CSS Responsive theme
--- version 1.0
--- Copyright (c) 2014 Thomsoon.com
--- licensed under the MIT
---
--- http://www.thomsoon.com/free-onepage-theme-html5.html
---
-*/
-
-/* Font Google - strong reaload time */
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,700,900&subset=latin,latin-ext);
-
-
-/*
- * Theme Name: Onepage
- * Author: Thomsoon
- * Created: 15/02/2014
- */
 
 html, body{
   font-family: 'Source Sans Pro', sans-serif;
@@ -151,7 +133,7 @@ h1 span{
   margin-left: -10px;
   width: 21px;
   height: 29px;
-  background: url(../img/arrow-down.png) no-repeat center center;
+  background: url(http://i1328.photobucket.com/albums/w532/timurpinar/idapur%20mobile/arrow-down_zps1lbtarsi.png) no-repeat center center;
   display: block;
   -webkit-animation: bounce-fade 1.2s infinite; /* Safari 4+ */
   -moz-animation:    bounce-fade 1.2s infinite; /* Fx 5+ */
