--- a/css/style-responsive.css
+++ b/css/style-responsive.css
@@ -295,3 +295,21 @@ textarea{
 }
 
 }
+
+
+/* -----------Smartphone View----------- */ 
+@media only screen and (max-width : 480px)   {
+
+   #sidebar {
+      display: none;
+   }
+   
+   #content {
+      width: 300px;
+   }
+   
+   #header {
+      display: none;
+   }
+
+}
